# brep-vs-point-clouds-fastener-classification

./: README.md  environment.yml  pyproject.toml  requirements.txt
scripts/: audit_detections.py  audit_split_leakage.py  build_label_csv.py  classify_assembly.py  classify_assembly_brep.py  compute_topology_distances.py  diagnose_mcmaster_misses.py  diagnose_one.py  diagnose_pipeline.py  download_to_grabcad_dump.py  error_analysis.py  eval_brepformer.py  eval_detection.py  eval_grabcad.py  eval_hybrid.py  eval_mcmaster.py  eval_ml_mcmaster.py  eval_pn_subtype13_normals.py  eval_pn_v6.py  eval_pointnet_mcb.py  eval_rule_based.py  eval_satellite.py  evaluate_models.py  filter_brep_to_600.py  full_analysis.py  full_analysis_subtype13.py  fusion360_to_brep.py  generate_lod_proxies.py  generate_synthetic_tests.py  harvest_real_cad_assemblies.py  inspect_detections.py  make_val_split.py  mcb_to_npy.py  mcmaster_scraper.py  mcmaster_scraper_gui.py  pipeline.py  pipeline_subtype13.py  prepare_pn_subtype13_normals.py  prepare_pn_v6_dataset.py  process_step_to_pointcloud.py  (+14 more)
step_vr_step/: __init__.py  cli.py  config.py  schema.py  sidecar_server.py  uuid_registry.py
tests/: conftest.py  test_detection.py  test_detection_ml.py  test_download_to_grabcad_dump.py  test_geometric_features.py  test_harvest_real_cad_assemblies.py  test_hole_detection.py  test_iso_tables.py  test_lod.py  test_readers.py  test_reconciliation.py  test_roundtrip.py  test_schema.py  test_validation.py  test_writers.py
thesis_results/: README.md  _generate.py  claims.md  discrepancies.md  provenance.md  (+1 more)
(+95 files in other folders)
