[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "step-vr-step"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "pythonocc-core>=7.8.0",
    "pygltflib>=1.16.0",
    "trimesh>=4.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pydantic>=2.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
ml = [
    "torch>=2.0",
    "pytorch-lightning>=2.0",
    "open3d>=0.17",
    "networkx>=3.0",
    "tensorboard>=2.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
